include/bindings.h

struct div_t {
  int quot;
  int rem;
};
struct ldiv_t {
  long quot;
  long rem;
};
struct lldiv_t {
  long long quot;
  long long rem;
};
struct WrenVM {
  uint8_t _unused[0];
};
struct WrenLoadModuleResult {
  const char *source;
  WrenLoadModuleCompleteFn onComplete;
  void *userData;
};
using WrenLoadModuleFn = WrenLoadModuleResult(*)(WrenVM *vm, const char *name);
using WrenBindForeignMethodFn = WrenForeignMethodFn(*)(WrenVM *vm,
                                                       const char *module,
                                                       const char *className,
                                                       bool isStatic,
                                                       const char *signature);
struct WrenForeignClassMethods {
  WrenForeignMethodFn allocate;
  WrenFinalizerFn finalize;
};
using WrenBindForeignClassFn = WrenForeignClassMethods(*)(WrenVM *vm,
                                                          const char *module,
                                                          const char *className);
struct WrenHandle {
  uint8_t _unused[0];
};
extern void *realloc(void *__ptr, unsigned long __size);
extern void *reallocarray(void *__ptr, uintptr_t __nmemb, uintptr_t __size);
extern void free(void *__ptr);
extern void *alloca(unsigned long __size);
extern void *valloc(uintptr_t __size);
extern int posix_memalign(void **__memptr, uintptr_t __alignment, uintptr_t __size);
extern void *aligned_alloc(unsigned long __alignment, unsigned long __size);
extern void abort();
extern int atexit(void (*__func)());
extern int at_quick_exit(void (*__func)());
extern int on_exit(void (*__func)(int __status, void *__arg), void *__arg);
extern void exit(int __status);
extern void quick_exit(int __status);
extern void _Exit(int __status);
extern char *getenv(const char *__name);
extern int putenv(char *__string);
extern int setenv(const char *__name, const char *__value, int __replace);
extern int unsetenv(const char *__name);
extern int clearenv();
extern char *mktemp(char *__template);
extern int mkstemp(char *__template);
extern int mkstemps(char *__template, int __suffixlen);
extern char *mkdtemp(char *__template);
extern int system(const char *__command);
extern char *realpath(const char *__name, char *__resolved);
extern void *bsearch(const void *__key,
                     const void *__base,
                     uintptr_t __nmemb,
                     uintptr_t __size,
                     __compar_fn_t __compar);
extern void qsort(void *__base, uintptr_t __nmemb, uintptr_t __size, __compar_fn_t __compar);
extern int abs(int __x);
extern long labs(long __x);
extern long long llabs(long long __x);
extern div_t div(int __numer, int __denom);
extern ldiv_t ldiv(long __numer, long __denom);
extern lldiv_t lldiv(long long __numer, long long __denom);
extern char *ecvt(double __value, int __ndigit, int *__decpt, int *__sign);
extern char *fcvt(double __value, int __ndigit, int *__decpt, int *__sign);
extern char *gcvt(double __value, int __ndigit, char *__buf);
extern char *qecvt(u128 __value, int __ndigit, int *__decpt, int *__sign);
extern char *qfcvt(u128 __value, int __ndigit, int *__decpt, int *__sign);
extern char *qgcvt(u128 __value, int __ndigit, char *__buf);
extern int ecvt_r(double __value,
                  int __ndigit,
                  int *__decpt,
                  int *__sign,
                  char *__buf,
                  uintptr_t __len);
extern int fcvt_r(double __value,
                  int __ndigit,
                  int *__decpt,
                  int *__sign,
                  char *__buf,
                  uintptr_t __len);
extern int qecvt_r(u128 __value,
                   int __ndigit,
                   int *__decpt,
                   int *__sign,
                   char *__buf,
                   uintptr_t __len);
extern int qfcvt_r(u128 __value,
                   int __ndigit,
                   int *__decpt,
                   int *__sign,
                   char *__buf,
                   uintptr_t __len);
extern int mblen(const char *__s, uintptr_t __n);
extern int mbtowc(wchar_t *__pwc, const char *__s, uintptr_t __n);
extern int wctomb(char *__s, wchar_t __wchar);
extern uintptr_t mbstowcs(wchar_t *__pwcs, const char *__s, uintptr_t __n);
extern uintptr_t wcstombs(char *__s, const wchar_t *__pwcs, uintptr_t __n);
extern int rpmatch(const char *__response);
extern int getsubopt(char **__optionp, char *const *__tokens, char **__valuep);
extern int getloadavg(double *__loadavg, int __nelem);